--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "vite-plugin-string": "^1.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
