fixed routing issues

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,5 +2,12 @@
   "navigationFallback": {
     "rewrite": "/index.html",
     "exclude": ["/api/*", "/static/", "/assets/"]
-  }
+  },
+  "routes": [
+    {
+      "route": "/",
+      "redirect": "/login",
+      "statusCode": 302
+    }
+  ]
 }
