--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -6,7 +6,7 @@
   "routes": [
     {
       "route": "/",
-      "redirect": "/login",
+      "redirect": "/events",
       "statusCode": 302
     }
   ]
